# python-project-52

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_alter_status_options_alter_status_name.py
task_manager/: settings.py  urls.py  views.py
task_manager/settings/: __init__.py  base.py  test.py
tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_labels.py  0003_alter_task_options_alter_task_author_and_more.py
templates/: base.html  home.html
templates/labels/: create.html  delete.html  list.html  update.html
templates/statuses/: create.html  delete.html  list.html  update.html
templates/tasks/: create.html  delete.html  detail.html  list.html  update.html
templates/users/: login.html  user_confirm_delete.html  user_form.html  user_list.html
users/: forms.py  models.py  tests.py  urls.py  views.py
users/fixtures/: users.json
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_first_name_and_more.py
