[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager"
authors = [
    { name = "Alexandra Minina", email = "i@minina-work.ru" },
    { name = "Hexlet", email = "hexlet@hexlet.io" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.5",
    "django-bootstrap5>=26.2",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.12",
    "coverage>=7.0.0",
    "psycopg2-binary>=2.9.12",
]
